# ManaRush

./: CMakeCache.txt  CMakeLists 2.txt  CMakeLists.txt  Free.tmx  Makefile  Makefile 3.27.22 AM  Makefile.txt  README.md  boss.c  boss.h  character.c  character.h  cmake_install.cmake  game  game.c  game.h  main.c  map copy.txt  map.tmx  map_renderer.c  map_renderer.h  projectile.c  projectile.h  tmx_example
headers/: character.h  interface.h  music.h
src/: character.c  interface.c  main.c  music.c
